Implemented AoC BOM